--- a/package.json
+++ b/package.json
@@ -5,17 +5,22 @@
   "author": "zxdjoey",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate"
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-generic-session": "^2.0.1",
+    "koa-json": "^2.0.2",
     "koa-passport": "^4.1.3",
     "koa-redis": "^4.0.0",
     "koa-router": "^7.4.0",
