--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vue-mt",
   "version": "1.0.0",
   "description": "My divine Nuxt.js project",
-  "author": "zxdjoey",
+  "author": "zxd95",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
@@ -11,29 +11,37 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.5.4",
-    "axios": "^0.19.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
     "crypto-js": "^3.1.9-1",
     "element-ui": "^2.4.11",
+    "js-pinyin": "^0.1.9",
     "koa": "^2.6.2",
     "koa-bodyparser": "^4.2.1",
     "koa-generic-session": "^2.0.1",
     "koa-json": "^2.0.2",
-    "koa-passport": "^4.1.3",
-    "koa-redis": "^4.0.0",
+    "koa-passport": "^4.1.1",
+    "koa-redis": "^3.1.3",
     "koa-router": "^7.4.0",
-    "mongoose": "^5.5.15",
-    "node-sass": "^4.12.0",
-    "nodemailer": "^6.2.1",
-    "nuxt": "^2.0.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.3.15",
+    "node-sass": "^4.11.0",
+    "nodemailer": "^4.7.0",
+    "nuxt": "^2.3.4",
     "passport-local": "^1.0.0",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "scss-loader": "0.0.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "babel-eslint": "^8.2.1",
+    "eslint": "^5.9.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-loader": "^2.1.1",
+    "eslint-plugin-html": "^5.0.0",
+    "eslint-plugin-vue": "^4.0.0",
+    "nodemon": "^1.18.7"
   }
 }
