--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
-  "name": "vue-mt",
+  "name": "imooc-mt",
   "version": "1.0.0",
-  "description": "My divine Nuxt.js project",
+  "description": "My bedazzling Nuxt.js project",
   "author": "zxd95",
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "precommit": "npm run lint"
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
